5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4431/executions/1596_1017.log
== TEST (2019-03-22 22:36:13) 
-- CODE:
from math import *
t1 = radians(float(input("Latitude de P1: ")))
g1 = radians(float(input("Longitude de P1: ")))
t2 = radians(float(input("latitude de P2: ")))
g2 = radians(float(input("Longitude de P2: ")))
R=6371,01
d=R*acos(sin(t1)*sin(t2)+cos(t1)*cos(t2))))
print(d)





-- ERROR:
File "XXXX", line 6
    R=6371,01
            ^
SyntaxError: invalid token
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 22:36:39) 
-- CODE:
from math import *
t1 = radians(float(input("Latitude de P1: ")))
g1 = radians(float(input("Longitude de P1: ")))
t2 = radians(float(input("latitude de P2: ")))
g2 = radians(float(input("Longitude de P2: ")))
R=6371,1
d=R*acos(sin(t1)*sin(t2)+cos(t1)*cos(t2))))
print(d)





-- ERROR:
File "XXXX", line 7
    d=R*acos(sin(t1)*sin(t2)+cos(t1)*cos(t2))))
                                             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 22:37:19) 
-- CODE:
from math import *
t1 = radians(float(input("Latitude de P1: ")))
g1 = radians(float(input("Longitude de P1: ")))
t2 = radians(float(input("latitude de P2: ")))
g2 = radians(float(input("Longitude de P2: ")))
R=6371,1
d=R*acos(sin(t1)*sin(t2)+cos(t1)*cos(t2))
print(d)





-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    d=R*acos(sin(t1)*sin(t2)+cos(t1)*cos(t2))
TypeError: can't multiply sequence by non-int of type 'float'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 22:43:29) 
-- CODE:
from math import *
t1 = radians(float(input("Latitude de P1: ")))
g1 = radians(float(input("Longitude de P1: ")))
t2 = radians(float(input("latitude de P2: ")))
g2 = radians(float(input("Longitude de P2: ")))
d=acos(sin(t1)*sin(t2)+cos(t1)*cos(t2))
d=d*6371,1
print(d)





-- OUTPUT:
(5.822722333613071, 1)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 22:44:05) 
-- CODE:
from math import *
t1 = radians(float(input("Latitude de P1: ")))
g1 = radians(float(input("Longitude de P1: ")))
t2 = radians(float(input("latitude de P2: ")))
g2 = radians(float(input("Longitude de P2: ")))
d=acos(sin(t1)*sin(t2)+cos(t1)*cos(t2))
d=d*6371,1
print(round(d,2))





-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(round(d,2))
TypeError: type tuple doesn't define __round__ method
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 22:44:35) 
-- CODE:
from math import *
t1 = radians(float(input("Latitude de P1: ")))
g1 = radians(float(input("Longitude de P1: ")))
t2 = radians(float(input("latitude de P2: ")))
g2 = radians(float(input("Longitude de P2: ")))
d=acos(sin(t1)*sin(t2)+cos(t1)*cos(t2))
d=d*6371,1
print(round(d,2))





-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(round(d,2))
TypeError: type tuple doesn't define __round__ method
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 22:45:04) 
-- CODE:
from math import *
t1 = radians(float(input("Latitude de P1: ")))
g1 = radians(float(input("Longitude de P1: ")))
t2 = radians(float(input("latitude de P2: ")))
g2 = radians(float(input("Longitude de P2: ")))
d=acos(sin(t1)*sin(t2)+cos(t1)*cos(t2))
d=d*6371,1
print(round(d,2))





-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(round(d,2))
TypeError: type tuple doesn't define __round__ method
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 22:48:31) 
-- CODE:
from math import *
t1 = radians(float(input("Latitude de P1: ")))
g1 = radians(float(input("Longitude de P1: ")))
t2 = radians(float(input("latitude de P2: ")))
g2 = radians(float(input("Longitude de P2: ")))
d=acos(sin(t1)*sin(t2)+cos(t1)*cos(t2))
x=d*6371,1
print(round(x,2))





-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(round(x,2))
TypeError: type tuple doesn't define __round__ method
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 22:52:32) 
-- CODE:
from math import *
t1 = radians(float(input("Latitude de P1: ")))
g1 = radians(float(input("Longitude de P1: ")))
t2 = radians(float(input("latitude de P2: ")))
g2 = radians(float(input("Longitude de P2: ")))
d=acos(sin(t1)*sin(t2)+cos(t1)*cos(t2))
x=d*6371,1
print(degrees(round(x,2)))





-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(degrees(round(x,2)))
TypeError: type tuple doesn't define __round__ method
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 22:53:00) 
-- CODE:
from math import *
t1 = radians(float(input("Latitude de P1: ")))
g1 = radians(float(input("Longitude de P1: ")))
t2 = radians(float(input("latitude de P2: ")))
g2 = radians(float(input("Longitude de P2: ")))
d=acos(sin(t1)*sin(t2)+cos(t1)*cos(t2))
x=d*6371,1
print(x)





-- OUTPUT:
(5.822722333613071, 1)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 22:54:48) 
-- CODE:
from math import *
t1 = radians(float(input("Latitude de P1: ")))
g1 = radians(float(input("Longitude de P1: ")))
t2 = radians(float(input("latitude de P2: ")))
g2 = radians(float(input("Longitude de P2: ")))
d=acos(sin(t1)*sin(t2)+cos(t1)*cos(t2))
x=d*6371,1
y=(round(x,2))
print(y)





-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    y=(round(x,2))
TypeError: type tuple doesn't define __round__ method
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-22 23:02:47) 
-- CODE:
from math import *
t1 = radians(float(input("Latitude de P1: ")))
g1 = radians(float(input("Longitude de P1: ")))
t2 = radians(float(input("latitude de P2: ")))
g2 = radians(float(input("Longitude de P2: ")))
d=acos(sin(t1)*sin(t2)+cos(t1)*cos(t2))
x=d*6371,1
y=(round(x,2))
print(y)





-- EXECUTION TIME:
0.158896
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1596/1017/main.py", line 8, in <module>
    y=(round(x,2))
TypeError: type tuple doesn't define __round__ method

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 23:02:57) 
-- CODE:
from math import *
t1 = radians(float(input("Latitude de P1: ")))
g1 = radians(float(input("Longitude de P1: ")))
t2 = radians(float(input("latitude de P2: ")))
g2 = radians(float(input("Longitude de P2: ")))
d=acos(sin(t1)*sin(t2)+cos(t1)*cos(t2))
x=d*6371,1
y=(round(x,2))
print(y)





-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    y=(round(x,2))
TypeError: type tuple doesn't define __round__ method
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 23:19:56) 
-- CODE:
from math import *
t1 = radians(float(input("Latitude de P1: ")))
g1 = radians(float(input("Longitude de P1: ")))
t2 = radians(float(input("latitude de P2: ")))
g2 = radians(float(input("Longitude de P2: ")))
R = 6371,01
d= R*acos(sin(t1)*sin(t2)+cos(t1)*cos(t2)*cos(g1-g2))
print(round(d,2))






-- ERROR:
File "XXXX", line 6
    R = 6371,01
              ^
SyntaxError: invalid token
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 23:20:33) 
-- CODE:
from math import *
t1 = radians(float(input("Latitude de P1: ")))
g1 = radians(float(input("Longitude de P1: ")))
t2 = radians(float(input("latitude de P2: ")))
g2 = radians(float(input("Longitude de P2: ")))
d= 6371,01*acos(sin(t1)*sin(t2)+cos(t1)*cos(t2)*cos(g1-g2))
print(round(d,2))






-- ERROR:
File "XXXX", line 6
    d= 6371,01*acos(sin(t1)*sin(t2)+cos(t1)*cos(t2)*cos(g1-g2))
             ^
SyntaxError: invalid token
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 23:20:39) 
-- CODE:
from math import *
t1 = radians(float(input("Latitude de P1: ")))
g1 = radians(float(input("Longitude de P1: ")))
t2 = radians(float(input("latitude de P2: ")))
g2 = radians(float(input("Longitude de P2: ")))
d= 6371,1*acos(sin(t1)*sin(t2)+cos(t1)*cos(t2)*cos(g1-g2))
print(round(d,2))






-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(round(d,2))
TypeError: type tuple doesn't define __round__ method
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 23:22:58) 
-- CODE:
from math import *

t1 = radians(float(input("Latitude de P1: ")))
g1 = radians(float(input("Longitude de P1: ")))
t2 = radians(float(input("latitude de P2: ")))
g2 = radians(float(input("Longitude de P2: ")))

d= 6371,1*acos(sin(t1)*sin(t2)+cos(t1)*cos(t2)*cos(g1-g2))

print(round(d,2))






-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    print(round(d,2))
TypeError: type tuple doesn't define __round__ method
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 23:23:45) 
-- CODE:
from math import *

t1 = radians(float(input("Latitude de P1: ")))
g1 = radians(float(input("Longitude de P1: ")))
t2 = radians(float(input("latitude de P2: ")))
g2 = radians(float(input("Longitude de P2: ")))

d= 6371.01*acos(sin(t1)*sin(t2)+cos(t1)*cos(t2)*cos(g1-g2))

print(round(d,2))






-- OUTPUT:
50.44
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-22 23:23:58) 
-- CODE:
from math import *

t1 = radians(float(input("Latitude de P1: ")))
g1 = radians(float(input("Longitude de P1: ")))
t2 = radians(float(input("latitude de P2: ")))
g2 = radians(float(input("Longitude de P2: ")))

d= 6371.01*acos(sin(t1)*sin(t2)+cos(t1)*cos(t2)*cos(g1-g2))

print(round(d,2))






-- EXECUTION TIME:
0.156836
-- TEST CASE 1:
---- input:
-3.036131
-60.04585
-3.088496
-59.59464
---- correct output:
50.44
---- user output:
50.44
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
